@@ -9,6 +9,8 @@ Version 1.8.3
        not registered. (Stefan)
 - NEW: Issue #551: Remember the 'ignore ancestry'
        option. (Stefan)
+- NEW: Issue #552: Tri-State checkbox handling
+       in repo browser. (Sergey Azarkevich)
 
 Version 1.8.2
 - BUG: Issue #522: OK button falsely enabled
